--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,37 @@
 #Wrapper{
     display: grid;
     grid-template-columns: 25% 25% 25% 1fr;
-    grid-template-rows: 10% 10% 35% 35% 10%;
-    height: 135vh;
+    grid-template-rows: 10% 5% 35% 35% 15%;
+    height: 140vh;
     grid-template-areas: 
-    'hd hd hd hd'
+    'hdp hd hd hd'
     'nv nv nv nv'
-    'sc sc sc sc'
-    'sc sc sc sc'
+    'sc1 sc2 sc3 sc4'
+    'sc5 sc6 sc7 sc8'
     'ft ft ft ft'
     ;
-    gap: 10px;
+    gap: 7px;
 }
+
+
 
 header{
     grid-area: hd;
-    background-color:#9b59b6;
+    background-color: #9b59b6;
 }
+
+#bild{
+    grid-area: hdp;
+    background-color: #9b59b6;
+    background-image: url('/dbc8b07c-7fc8-4d7e-8e9a-2bc3d60be354.webp');
+    border-radius: ;
+}
+
 
 nav{
     grid-area: nv;
+    background-color: #9b59b6;
+
 }
 
 section{
@@ -28,4 +40,19 @@ section{
 
 footer{
     grid-area: ft;
+}
+
+a{
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    transition-duration: 0.6s;
+}
+
+a:hover{
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+    text-decoration: underline;
 }
