--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+body{
+    background-color: bisque;
+}
+
 #Wrapper{
     display: grid;
     grid-template-columns: 25% 25% 25% 1fr;
@@ -40,7 +44,7 @@ nav{
 
 #bild{
     grid-area: sc;
-    background-image: url('/6461d4f4-ba96-57cf-b4ac-831336af12b5.webp');
+    background-image: url('/img/6461d4f4-ba96-57cf-b4ac-831336af12b5.webp');
     border-radius: 10px;
     background-repeat: no-repeat;
     background-size: cover;
@@ -55,6 +59,9 @@ nav{
     display: flex;
     justify-content: center;
     align-items: center;
+    background-image: url('/img/f799b861-c171-5801-94f1-d072055ebd54.webp');
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 #sc2{
@@ -64,6 +71,9 @@ nav{
     display: flex;
     justify-content: center;
     align-items: center;
+    background-image: url('/img/veeterzy-sMQiL_2v4vs-unsplash-1-1024x683.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 #sc3{
@@ -73,6 +83,9 @@ nav{
     display: flex;
     justify-content: center;
     align-items: center;
+    background-image: url('/img/sub\ genre\ guide.webp');
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 #sc4{
@@ -82,6 +95,9 @@ nav{
     display: flex;
     justify-content: center;
     align-items: center;
+    background-image: url('/img/istockphoto-1368523807-612x612.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 #sc5{
@@ -91,6 +107,9 @@ nav{
     display: flex;
     justify-content: center;
     align-items: center;
+    background-image: url('/img/psykologisk_huvudbild.png');
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 #sc6{
@@ -100,6 +119,10 @@ nav{
     display: flex;
     justify-content: center;
     align-items: center;
+    background-image: url('/img/images\ \(1\).jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 #sc7{
@@ -109,6 +132,9 @@ nav{
     display: flex;
     justify-content: center;
     align-items: center;
+    background-image: url('/img/scale.webp');
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 #sc8{
@@ -118,6 +144,9 @@ nav{
     display: flex;
     justify-content: center;
     align-items: center;
+    background-image: url('/img/mgl8959.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 footer{
