--- a/css/style.css
+++ b/css/style.css
@@ -5,21 +5,18 @@ body{
 #Wrapper{
     display: grid;
     grid-template-columns: 25% 25% 25% 1fr;
-    grid-template-rows: 7% 33% 20% 20% 1fr;
+    grid-template-rows: 7% 30% 5% 20% 20% 1fr;
     height: 170vh;
     grid-template-areas: 
     'hd nv nv nv'
-     'sc sc sc sc'
+    'sc sc sc sc'
+    'sc0 sc0 sc0 sc0'
     'sc1 sc2 sc3 sc4'
     'sc5 sc6 sc7 sc8'
     'ft ft ft ft'
     ;
     gap: 7px;
 }
-
-
-
-
 
 header{
     grid-area: hd;
@@ -28,9 +25,6 @@ header{
     justify-content: center;
     border-radius: 10px;
 }
-
-
-
 
 nav{
     grid-area: nv;
@@ -50,6 +44,12 @@ nav{
     background-size: cover;
     background-position: center
     
+}
+
+#sc0{
+    grid-area: sc0;
+    background-color: #9b59b6;
+    border-radius: 10px;
 }
 
 #sc1{
@@ -279,13 +279,15 @@ h2{
 #Wrapper3{
     display:grid;
     grid-template-columns: 25% 25% 25% 1fr;
-    grid-template-rows: 8.5% 25% 25% 23.5% 1fr;
-    height: 140vh;
+    grid-template-rows: 6% 18% 15% 15% 15% 15% 1fr;
+    height: 200vh;
     grid-template-areas:
     'hd nv nv nv'
     'sc9 sc9 sc9 sc9'
     'sc11 sc12 sc13 sc14'
     'sc11 sc12 sc13 sc14'
+    'sc15 sc16 sc17 sc18'
+    'sc15 sc16 sc17 sc18'
     'ft ft ft ft'
     ; 
     gap: 7px;
@@ -298,8 +300,6 @@ h2{
     justify-content: center;
     text-align: center
 }
-
-
 
 #sc11:hover{
     transform: translateY(-10px);
@@ -345,6 +345,58 @@ h2{
     box-shadow: 0 4px 8px rgba(0,0,0,0.2);
 }
 
+#sc15{
+    grid-area: sc15;
+    background-color: #9b59b6;
+    display: flex;
+    justify-content: center;
+    text-align: center
+}
+
+#sc15:hover{
+    transform: translateY(-10px);
+    box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+}
+
+#sc16{
+    grid-area: sc16;
+    background-color: #9b59b6;
+    display: flex;
+    justify-content: center;
+    text-align: center
+}
+
+#sc16:hover{
+    transform: translateY(-10px);
+    box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+}
+
+#sc17{
+    grid-area: sc17;
+    background-color: #9b59b6;
+    display: flex;
+    justify-content: center;
+    text-align: center
+}
+
+#sc17:hover{
+    transform: translateY(-10px);
+    box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+}
+
+#sc18{
+    grid-area: sc18;
+    background-color: #9b59b6;
+    display: flex;
+    justify-content: center;
+    text-align: center
+}
+
+#sc18:hover{
+    transform: translateY(-10px);
+    box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+}
+
 .buy-button {
     
     padding: 10px 20px;
@@ -356,7 +408,6 @@ h2{
     display: block;
     margin: auto;
 }
-
 
 .price {
     font-size: 1.5em;
@@ -370,4 +421,16 @@ h2{
     object-fit: cover; 
     border-bottom: 1px solid #ddd;
     margin-bottom: 15px;
+}
+
+.knapp{
+    border: none;
+    color: #fff;
+    padding: 20px 30px;
+    text-align: center;
+    text-decoration: underline;
+    display: inline-block;
+    transition-duration: 0.6s;
+    border-radius: 10px;
+    background-color: rgba(0,0,0, 0.5);
 }
